# openstorm

./: .gitignore  AGENT_RUNTIME_ARCHITECTURE.md  AI_PANEL_PLAN.md  CLAUDE.md  CONTRIBUTING.md  ENTERPRISE_PARITY.md  LICENSE  Makefile  README.md  generate_icons.sh  index.html  opencode.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/.playwright-mcp/: page-2026-07-04T19-01-16-240Z.yml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dap_installer.rs  file_watcher.rs  log.rs  lsp.rs  lsp_installer.rs  main.rs  session.rs  templates.rs  terminal.rs  theme.rs
src-tauri/src/ai/: agent.rs  anthropic.rs  commands.rs  context.rs  cost_tracker.rs  embedding_store.rs  ignore.rs  lmstudio.rs  mcp.rs  memory.rs  mod.rs  ollama.rs  openai.rs  orchestrator.rs  permissions.rs  project_context.rs  provider.rs  rag.rs  sandbox.rs  session_log.rs  tools.rs  verifier.rs
src-tauri/src/ai/agent/: builder.rs  event.rs  mod.rs  planner.rs  prompt.rs  run.rs  runtime.rs  telemetry.rs  todo_interceptor.rs  tool_executor.rs
src-tauri/src/ai/cache/: mod.rs  tool_cache.rs
src-tauri/src/ai/commands/: chat.rs  mod.rs  providers.rs  session.rs  state.rs  subagent.rs
src-tauri/src/ai/context/: memory.rs  mod.rs  project.rs  service.rs  session_log.rs
src-tauri/src/ai/embedding_store/: mod.rs  store.rs
src-tauri/src/ai/legacy/: cost_tracker.rs
src-tauri/src/ai/mcp/: types.rs
src-tauri/src/ai/messages/: mod.rs
src-tauri/src/ai/middleware/: cache.rs  permission.rs  pipeline.rs  redirect.rs
src-tauri/src/ai/orchestrator/: agent_runner.rs  classifier.rs  decomposer.rs  mod.rs
src-tauri/src/ai/permissions/: mod.rs  profiles.rs  service.rs
src-tauri/src/ai_v2/: mod.rs
src-tauri/src/commands/: adapter.rs  database.rs  directory.rs  file.rs  git.rs  mod.rs  project.rs  run.rs  watch.rs
src-tauri/src/config/: mod.rs
src-tauri/src/dap/: adapter.rs  adapter_registry.rs  client.rs  connection.rs  methods.rs  mod.rs  protocol.rs  transport.rs  types.rs  watch.rs
src-tauri/src/dap_installer/: installer.rs  installers.rs  registry.rs  types.rs
src-tauri/src/database/: error.rs  manager.rs  mod.rs  types.rs
src-tauri/src/git/: blame.rs  branch.rs  commit.rs  diff.rs  github.rs  log.rs  mod.rs  remote.rs  repo.rs  status.rs
src-tauri/src/graph/: builder.rs  errors.rs  mod.rs  types.rs
src-tauri/src/infrastructure/: fs.rs  http.rs  mod.rs  process.rs
src-tauri/src/lsp/: client.rs  commands.rs  fallbacks.rs  helpers.rs  markdown.rs  mod.rs  notifications.rs  pool.rs  protocol.rs  requests.rs
src-tauri/src/lsp_installer/: config.rs  github.rs  go.rs  installer.rs  mod.rs  npm.rs
src-tauri/src/process/: manager.rs  mod.rs  output.rs
src-tauri/src/run_config/: configuration.rs  detector.rs  mod.rs  storage.rs
(+575 files in other folders)
