[package]
name = "openstorm"
version = "0.1.0"
description = "A high-performance, lightweight IDE built to compete with JetBrains products"
authors = ["OpenStorm Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Dastagirireddy/openstorm"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.23"
base64 = "0.21"
image = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
lsp-types = "0.97"
url = "2"
notify = "7"
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["stream", "json", "blocking"] }
flate2 = "1.0"
tar = "0.4"
zip = "2.2"
dirs = "6"
directories = "5.0"    # Cross-platform paths (XDG, macOS, Windows)
sha2 = "0.10"
tokio-stream = "0.1"
nix = { version = "0.29", features = ["signal"] }
once_cell = "1.19"
pulldown-cmark = "0.10"
regex = "1"
syntect = "5"
dark-light = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"           # TOML config format
keyring = "3.0"        # System keychain for passwords
uuid = { version = "1.0", features = ["v4"] }  # Unique IDs
thiserror = "2.0"      # Error handling

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
